--- a/config.yaml
+++ b/config.yaml
@@ -10,28 +10,15 @@ disableKinds:
   - RSS
 pluralizelisttitles: no
 params:
-  author: Coco & Bubu
+  author: Venta por Mudanza Providencia
   description: Sitio de una pagina para una venta por mudanza en Providencia, Chile
   copyright: '&copy;2021 Coco & Bubu'
   hideAutoMenu: no
   message: ''
-  sidebarAbout:
-    - I am a creative illustrator and graphic designer with more than 10 years of
-      experience.
-    - Originally from Toronto, currently based in London.
-  navlinks:
-    - home: yes
-      name: Home
-      url: portfolio/
-    - name: About
-      url: about/
-    - name: Get in touch
-      url: contact/
-  style: default
     
 menu:
   main:
-    - name: External
+    - name: About
 #      url: https://example.com
 social:
   whatsapp: https://wa.me/56951169934?text=Hola!%20Me%20interesan%20tus%20productos%20en%20venta.%20Cuentame%20mas%20sobre%20...
