--- a/config.yaml
+++ b/config.yaml
@@ -11,7 +11,7 @@ disableKinds:
 pluralizelisttitles: no
 params:
   author: Venta por Mudanza Providencia
-  description: Sitio de una pagina para una venta por mudanza en Providencia, Chile
+  description: Nos vamos de Chile y vendemos todo, Ayudanos a difundir! retiro en Providencia, Chile
   copyright: '&copy;2021 Coco & Bubu'
   hideAutoMenu: no
   message: ''
