--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,8 @@
-baseURL: https://example.com
+baseURL: https://ventapormudanza.netlify.app
 languageCode: es-CL
 title: Venta por Mudanza Providencia
 Paginate: 1000
-googleAnalytics: G-YG96QXSCBL
+googleAnalytics: 'G-YG96QXSCBL'
 theme: showcase-hugo-theme
 disableKinds:
   - taxonomy
